# hosp-equip-maint

./: .env  .env.example  .gitignore  .replit  README.md  app.py  build.sh  build_and_run.sh  email_preview.html  gunicorn.conf.py  import_error_analysis.md  pyproject.toml  render.yaml  requirements.txt  start.sh  template_columns.md  test_status.py  wsgi.py
app/: __init__.py  config.py  main.py
app/models/: ocm.py  ppm.py  training.py
app/routes/: __init__.py  api.py  auth.py  views_new.py
app/services/: data_service.py  email_service.py  import_export.py  validation.py
app/static/css/: datepicker.css  enhanced.css  main.css  standardized-tables.css  theme.css
app/static/js/: dashboard.js  datepicker.js  department-machines.js  enhanced-tables.js  enhanced-ui.js  equipment_list.js  import_export.js  main.js  searchable-select.js  theme-manager.js  training-table.js
app/templates/: base.html  change_password.html  index.html  login.html  profile.html  test_datepicker.html
app/templates/equipment/: _ocm_fields.html  _ppm_quarters.html  add.html  edit.html  list.html
app/templates/import_export/: main.html  unified.html
app/templates/settings/: index.html
app/templates/training/: add.html  edit.html  import_export.html  list.html
app/utils/: config_reloader.py  env_writer.py
attached_assets/: Pasted-Overall-Goal-Enhance-the-existing-system-with-bulk-actions-PPM-form-simplification-improved-data--1746543996082.txt
tests/: conftest.py  test_routes.py  test_services.py
